updated markup and edited text

--- a/_posts/2012-01-11-prologue.md
+++ b/_posts/2012-01-11-prologue.md
@@ -3,9 +3,13 @@ layout: post
 categories : intro
 ---
 
-4E71 is the opcode for the NOP operation in the Motorola 68000 microprocessor. It's an assembly instruction to do nothing. Although alone it may seem useless, within the context of other opcodes, it provides a valuable function. Similarily, while this blog is about nothing in particular, hopefully someone will find it to be of some small value. 
+4E71 is the opcode for the NOP operation in the Motorola 68000 microprocessor. It's an assembly instruction   
+_to_   
+_do_  
+_nothing_.    
+Although something that does nothing seems useless, within the context of other opcodes, it provides a valuable function. Similarily, while this blog is about nothing in particular, hopefully it will turn out to have some small value. 
 
-## Post Scriptus
+**_post scriptum_**  
 Although I haven't written assembly since university, this manual is right up there with all the great technical references of our time: [Motorola 68K](http://www.freescale.com/files/archives/doc/ref_manual/M68000PRM.pdf) d(^__^)b
 
 ; 
